--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "html-template-tag": "^2.0.0",
     "morgan": "^1.9.1",
     "nodemailer": "^4.6.8",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "pg": "^6.1.2",
